@@ -76,6 +76,10 @@ static double histo_color_b[] = { 0.0, 0.0, 1.0, 0.0 };
 // static float graph_height = 0.f;	// the max value of all bins
 static guint64 clipped[] = { 0, 0 };
 
+// Original ICC profile, in case we don't apply a stretch and need to revert
+static cmsHPROFILE original_icc = NULL;
+static gboolean single_image_stretch_applied = FALSE;
+
 // The 4th toggle pointer remains NULL, but it makes the logic easier in redraw_histo()
 static GtkToggleToolButton *toggles[MAXVPORT] = { NULL };
 static GtkToggleToolButton *toggleGrid = NULL, *toggleCurve = NULL, *toggleOrig = NULL;
@@ -179,7 +183,7 @@ static void histo_startup() {
 	}
 }
 
-static void histo_close(gboolean revert, gboolean update_image_if_needed) {
+static void histo_close(gboolean revert, gboolean update_image_if_needed, gboolean revert_icc_profile) {
 	if (revert) {
 
 		for (int i = 0; i < fit->naxes[2]; i++) {
@@ -196,6 +200,12 @@ static void histo_close(gboolean revert, gboolean update_image_if_needed) {
 	// free data
 	if(!sequence_working && !revert) {
 		clear_hsl();
+	}
+	if (revert_icc_profile && !single_image_stretch_applied) {
+		if (gfit.icc_profile)
+			cmsCloseProfile(gfit.icc_profile);
+		gfit.icc_profile = copyICCProfile(original_icc);
+		color_manage(&gfit, gfit.icc_profile != NULL);
 	}
 	clear_backup();
 	clear_hist_backup();
@@ -719,7 +729,7 @@ void display_histo(gsl_histogram *histo, cairo_t *cr, int layer, int width,
 				displayed_values = NULL;
 			}
 			PRINT_ALLOC_ERR;
-			histo_close(TRUE, TRUE);
+			histo_close(TRUE, TRUE, TRUE);
 			return;
 		}
 		displayed_values = tmp;
@@ -1194,7 +1204,7 @@ void on_histogram_window_show(GtkWidget *object, gpointer user_data) {
 gboolean on_button_histo_close_clicked(GtkButton *button, gpointer user_data) {
 	closing = TRUE;
 	set_cursor_waiting(TRUE);
-	histo_close(TRUE, TRUE);
+	histo_close(TRUE, TRUE, TRUE);
 	set_cursor_waiting(FALSE);
 	siril_close_dialog("histogram_dialog");
 	return FALSE;
@@ -1203,7 +1213,7 @@ gboolean on_button_histo_close_clicked(GtkButton *button, gpointer user_data) {
 void on_button_histo_reset_clicked(GtkButton *button, gpointer user_data) {
 	set_cursor_waiting(TRUE);
 	reset_cursors_and_values(FALSE);
-	histo_close(TRUE, TRUE);
+	histo_close(TRUE, TRUE, FALSE);
 	histo_startup();
 	set_cursor_waiting(FALSE);
 }
@@ -1252,7 +1262,7 @@ void on_button_histo_apply_clicked(GtkButton *button, gpointer user_data) {
 		 * It is better to first close the window as it is a liveview tool
 		 * TODO: could we improve this behavior?
 		 */
-			histo_close(TRUE, FALSE);
+			histo_close(TRUE, FALSE, FALSE);
 			siril_close_dialog("histogram_dialog");
 
 		/* apply the process */
@@ -1284,7 +1294,7 @@ void on_button_histo_apply_clicked(GtkButton *button, gpointer user_data) {
 		 * It is better to first close the window as it is a liveview tool
 		 * TODO: could we improve this behavior?
 		 */
-			histo_close(TRUE, FALSE);
+			histo_close(TRUE, FALSE, TRUE);
 			siril_close_dialog("histogram_dialog");
 
 		/* apply the process */
@@ -1303,13 +1313,19 @@ void on_button_histo_apply_clicked(GtkButton *button, gpointer user_data) {
 			histo_recompute();
 		}
 		populate_roi();
-		// partial cleanup
+		// janky undo preparation to account for ICC usage
+		// this is purely a shallow copy, it MUST NOT be cleared with clearfits
+		fits undo_fit = {0};
+		memcpy(&undo_fit, get_preview_gfit_backup(), sizeof(fits));
+		undo_fit.icc_profile = original_icc;
+		undo_fit.color_managed = original_icc != NULL;
+
 		if (invocation == HISTO_STRETCH) {
 			siril_log_message(_("Applying MTF with values %f, %f, %f\n"),
 				_shadows, _midtones, _highlights);
 			siril_debug_print("Applying histogram (mid=%.3f, lo=%.3f, hi=%.3f)\n",
 				_midtones, _shadows, _highlights);
-			undo_save_state(get_preview_gfit_backup(),
+			undo_save_state(&undo_fit,
 				_("Histogram Transf. (mid=%.3f, lo=%.3f, hi=%.3f)"),
 				_midtones, _shadows, _highlights);
 		} else if (invocation == GHT_STRETCH) {
@@ -1317,37 +1333,37 @@ void on_button_histo_apply_clicked(GtkButton *button, gpointer user_data) {
 			if (_payne_colourstretchmodel != COL_SAT) {
 				switch (_stretchtype) {
 					case STRETCH_PAYNE_NORMAL:
-						undo_save_state(get_preview_gfit_backup(), _("GHS pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
 						break;
 					case STRETCH_PAYNE_INVERSE:
-						undo_save_state(get_preview_gfit_backup(), _("GHS INV pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS INV pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
 						break;
 					case STRETCH_ASINH:
-						undo_save_state(get_preview_gfit_backup(), _("GHS ASINH pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS ASINH pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
 						break;
 					case STRETCH_INVASINH:
-						undo_save_state(get_preview_gfit_backup(), _("GHS ASINH INV pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS ASINH INV pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
 						break;
 					case STRETCH_LINEAR:
-						undo_save_state(get_preview_gfit_backup(), _("GHS LINEAR BP: %.2f"), _BP);
+						undo_save_state(&undo_fit, _("GHS LINEAR BP: %.2f"), _BP);
 						break;
 				}
 			} else {
 				switch (_stretchtype) {
 					case STRETCH_PAYNE_NORMAL:
-						undo_save_state(get_preview_gfit_backup(), _("GHS SAT pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS SAT pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
 						break;
 					case STRETCH_PAYNE_INVERSE:
-						undo_save_state(get_preview_gfit_backup(), _("GHS INV SAT pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS INV SAT pivot: %.3f, amount: %.2f, local: %.2f [%.2f %.2f]"), _SP, _D, _B, _LP, _HP);
 						break;
 					case STRETCH_ASINH:
-						undo_save_state(get_preview_gfit_backup(), _("GHS ASINH SAT pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS ASINH SAT pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
 						break;
 					case STRETCH_INVASINH:
-						undo_save_state(get_preview_gfit_backup(), _("GHS ASINH INV SAT pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
+						undo_save_state(&undo_fit, _("GHS ASINH INV SAT pivot: %.3f, amount: %.2f [%.2f %.2f]"), _SP, _D, _LP, _HP);
 						break;
 					case STRETCH_LINEAR:
-						undo_save_state(get_preview_gfit_backup(), _("GHS LINEAR SAT BP: %.2f"), _BP);
+						undo_save_state(&undo_fit, _("GHS LINEAR SAT BP: %.2f"), _BP);
 						break;
 				}
 			}
@@ -1358,13 +1374,15 @@ void on_button_histo_apply_clicked(GtkButton *button, gpointer user_data) {
 		histo_startup();
 		reset_cursors_and_values(FALSE);
 
+		single_image_stretch_applied = TRUE;
+
 		set_cursor("default");
 	}
 }
 
 void apply_histo_cancel() {
 	set_cursor_waiting(TRUE);
-	histo_close(TRUE, TRUE);
+	histo_close(TRUE, TRUE, TRUE);
 	set_cursor_waiting(FALSE);
 	siril_close_dialog("histogram_dialog");
 
@@ -1494,14 +1512,34 @@ void toggle_histogram_window_visibility(int _invocation) {
 	for (int i=0;i<3;i++) {
 		do_channel[i] = TRUE;
 	}
-	icc_auto_assign_or_convert(&gfit, ICC_ASSIGN_ON_STRETCH);
 
 	if (gtk_widget_get_visible(lookup_widget("histogram_dialog"))) {
 		set_cursor_waiting(TRUE);
-		histo_close(TRUE, TRUE);
+		histo_close(TRUE, TRUE, TRUE);
 		set_cursor_waiting(FALSE);
+
 		siril_close_dialog("histogram_dialog");
 	} else {
+		if (original_icc)
+			cmsCloseProfile(original_icc);
+		original_icc = copyICCProfile(gfit.icc_profile);
+		icc_auto_assign_or_convert(&gfit, ICC_ASSIGN_ON_STRETCH);
+		single_image_stretch_applied = FALSE;
+		// When opening the dialog with a single image loaded, we cache the original ICC
+		// profile (may be NULL) in case the user closes the dialog without applying a
+		// stretch, in which case we will revert.
+		if (single_image_is_loaded()) {
+			if (original_icc) {
+				cmsCloseProfile(original_icc);
+				original_icc = copyICCProfile(gfit.icc_profile);
+			}
+			icc_auto_assign_or_convert(&gfit, ICC_ASSIGN_ON_STRETCH);
+		} else {
+			if (original_icc) {
+				cmsCloseProfile(original_icc);
+				original_icc = NULL;
+			}
+		}
 		reset_cursors_and_values(TRUE);
 		copy_gfit_to_backup();
 		//Ensure the colour stretch model is initialised at startup
@@ -1837,7 +1875,7 @@ void on_payne_colour_stretch_model_changed(GtkComboBox *combo, gpointer user_dat
 		} else {
 			set_cursor_waiting(TRUE);
 			reset_cursors_and_values(FALSE);
-			histo_close(TRUE, TRUE);
+			histo_close(TRUE, TRUE, FALSE);
 			setup_hsl();
 			_payne_colourstretchmodel = tmp;
 			histo_startup();
@@ -1856,7 +1894,7 @@ void on_payne_colour_stretch_model_changed(GtkComboBox *combo, gpointer user_dat
 		if (_payne_colourstretchmodel == COL_SAT) {
 			set_cursor_waiting(TRUE);
 			reset_cursors_and_values(FALSE);
-			histo_close(TRUE, TRUE);
+			histo_close(TRUE, TRUE, FALSE);
 			clear_hsl();
 			_payne_colourstretchmodel = tmp;
 			histo_startup();
