@@ -17,8 +17,9 @@ xx/xx/xx
 * Fixed wrong cache file name (parent directory twice in the returned path) resulting in impossibility to cache files (#1734)
 * Fixed handling bayer/Xtrans patterns in more robust way accross the codebase (!903)
 * Fixed astrometric alignement for mosaics with some slight skew in the solution (#1747)
-* Fix issues identifed by static analysis (MR tbc)
-* Fix issue with findstar command when running from a python script (#1782)
+* Fixed issues identifed by static analysis (MR tbc)
+* Fixed issue with findstar command when running from a python script (#1782)
+* Fixed issue with auto-applying ICC profiles in stretch tools if nothing is done (reverts correctly) (#1768)
 * Fix issue in SPCC where it would complain about missing OSC BB filter when in NB mode
 
 **Improvements:**
